--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
 }
 
 .image-gallery-slide {
-  max-height: 533px;
+  /* max-height: 533px; */
 }
 .image-gallery-image {
   /* height: 533px; */
