[Style]Project img library style edit

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ body {
   box-shadow: #2b15453d 1px 10px 10px 5px;
 }
 
-.image-gallery-slide {
-  /* max-height: 533px; */
+.image-gallery-slides {
+  border-radius: 1rem;
 }
 .image-gallery-image {
   border-radius: 1rem;
